--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>85553418895-58kroc7qqccakgshop5ronerv16ll6nr.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.85553418895-58kroc7qqccakgshop5ronerv16ll6nr</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>85553418895-t8i4iugp5t4jsrf7fht2q87b9argiqtv.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyB4PfDBg5j4M8Vtfcj1UGa6xi5Eo7kqyGc</string>
 	<key>GCM_SENDER_ID</key>
