--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,15 @@ dependencies:
   firebase_core: ^3.3.0
   firebase_auth: ^5.1.4
   google_fonts: ^6.2.1
-  # firebase_cloud_firestore: ^5.0.1
+  font_awesome_flutter: ^10.7.0
+  google_sign_in: ^6.2.1
+  sign_in_with_apple: ^6.1.1
+  crypto: ^3.0.5
+  json_annotation: ^4.9.0
+  build_runner: ^2.4.11
+  json_serializable: ^6.8.0
+  firebase_cloud_firestore: ^5.0.1
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
