--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   json_serializable: ^6.8.0
   firebase_cloud_firestore: ^5.0.1
   rxdart: ^0.28.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -71,9 +72,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/covers/
+    - assets/congrats.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
